--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,9 +21,11 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-        
-   # - name: Restore dependencies
-   #   run: dotnet restore
       
     - name: Test
       run: dotnet test
+      
+    - name: Publish
+      run: dotnet publish .\Adrien.Bassail.FaceDetection.Console\Adrien.Bassail.FaceDetection.Console.csproj --self-contained true -C release win-x64
+      
+      
