--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,11 +21,12 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    #J'ai passé l'étape de tests car ils ne retournent pas le même résultat qu'en local ...  
-    #- name: Test
-    #  run: dotnet test
+    #Les tests ne retournent pas le même résultat qu'en local donc l'etape ne passe pas  
+    - name: Test
+      run: dotnet test
       
     - name: Publish
       run: dotnet publish .\Adrien.Bassail.FaceDetection.Console\Adrien.Bassail.FaceDetection.Console.csproj --self-contained true -C release win-x64
       
+    #Get artifact and upload it
       
